Add SPORTBEX_API_KEY and additional API configurations to .env.exampleAdd SPORTBEX_API_KEY and additional API configurations to .env.exampleUpdate .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,17 @@
 # Environment Variables Configuration
 # Copy this file to .env and fill in your actual values
-
 # ==============================================
 # ODDS API CONFIGURATION
 # ==============================================
 # Get your API key from: https://the-odds-api.com/
 ODDS_API_KEY=your_odds_api_key_here
-
 # API endpoints (leave as default unless using custom endpoint)
 ODDS_API_BASE_URL=https://api.the-odds-api.com/v4
+
+# SportBex API Configuration
+# Get your API key from: https://sportbex.com/
+SPORTBEX_API_KEY=your_sportbex_api_key_here
+SPORTBEX_API_BASE_URL=https://api.sportbex.com/v1
 
 # ==============================================
 # DATABASE CONFIGURATION
@@ -21,13 +24,10 @@ DATABASE_PATH=./betting_data.db
 # ==============================================
 # Flask secret key for session management (generate a random string)
 SECRET_KEY=your_secret_key_here_change_this_in_production
-
 # Flask environment (development/production)
 FLASK_ENV=development
-
 # Flask debug mode (True/False)
 FLASK_DEBUG=True
-
 # Host and port configuration
 FLASK_HOST=0.0.0.0
 FLASK_PORT=5000
@@ -45,7 +45,6 @@ MIN_SAMPLE_SIZE=100
 # Comma-separated list of sports to track
 # Options: soccer, basketball, baseball, american_football, ice_hockey, etc.
 ENABLED_SPORTS=soccer,basketball,american_football
-
 # Comma-separated list of betting markets
 # Options: h2h (moneyline), spreads, totals
 ENABLED_MARKETS=h2h,spreads,totals
@@ -61,7 +60,6 @@ DATA_REFRESH_INTERVAL=300
 # ==============================================
 # Log level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
-
 # Log file location
 LOG_FILE=./logs/betfinder.log
 
@@ -70,7 +68,6 @@ LOG_FILE=./logs/betfinder.log
 # ==============================================
 # Enable/disable CORS (True/False)
 ENABLE_CORS=False
-
 # Allowed CORS origins (comma-separated)
 CORS_ORIGINS=http://localhost:3000
 
@@ -79,9 +76,13 @@ CORS_ORIGINS=http://localhost:3000
 # ==============================================
 # If using multiple odds providers
 # ALTERNATE_ODDS_API_KEY=your_alternate_key_here
-
 # Sports data API (if needed)
 # SPORTS_DATA_API_KEY=your_sports_data_key_here
+# Rapid API key for additional sports data sources
+# RAPID_API_KEY=your_rapid_api_key_here
+# BetFair API credentials (if using Betfair exchange)
+# BETFAIR_APP_KEY=your_betfair_app_key_here
+# BETFAIR_SESSION_TOKEN=your_betfair_session_token_here
 
 # ==============================================
 # NOTES
@@ -90,3 +91,4 @@ CORS_ORIGINS=http://localhost:3000
 # 2. Keep your API keys secure and rotate them regularly
 # 3. Use different keys for development and production environments
 # 4. Some APIs have rate limits - check documentation
+# 5. Test your API keys before deploying to production
