--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,7 @@
+
 # Add your actual RapidAPI key below
 RAPIDAPI_KEY = "your_actual_rapidapi_key_here"
+
+# Yahoo Fantasy API credentials
+YAHOO_CONSUMER_KEY = "your_key_here"
+YAHOO_CONSUMER_SECRET = "your_secret_here"
