--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,3 +1,6 @@
 
 # Add your actual RapidAPI key below
 RAPIDAPI_KEY = "your_actual_rapidapi_key_here"
+
+# PandaScore API token
+NEW_API_TOKEN = "Jm_xeiIhfmGcak48bzmcwk7nNAW-Gv6ntEWiKkeK4h8wT1z-wg"
