Phase 3 start: api_server uses SportbexProvider; bet_db provider-aware schema; docs updated

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,8 @@ ODDS_API_BASE_URL=https://api.the-odds-api.com/v4
 # SportBex API Configuration
 # Get your API key from: https://sportbex.com/
 SPORTBEX_API_KEY=your_sportbex_api_key_here
-SPORTBEX_API_BASE_URL=https://api.sportbex.com/v1
+# Use the trial API URL for testing, production URL for live
+SPORTBEX_API_URL=https://trial-api.sportbex.com
 
 # ==============================================
 # DATABASE CONFIGURATION
