--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 streamlit>=1.28.0
 pandas>=2.0.0
 requests>=2.31.0
-requests-oauthlib>=1.3.1
+lxml>=4.9.0
+pyarrow
+pydfs-lineup-optimizer-enhanced
+nfl_data_py
 lxml>=4.9.0
 python-dotenv>=1.0.0
 numpy>=1.24.0
 plotly>=5.17.0
+nbastatpy>=0.1.0
