Integrate mem0ai for intelligent memory and personalization
- Install mem0ai package and add to requirements.txt
- Create AgentMemoryManager with mem0ai integration and fallback storage
- Add memory capabilities to all SportAgent base class methods:
  * store_pick_result() - Learn from user outcomes
  * store_user_feedback() - Track preferences and feedback
  * get_personalized_insights() - Analyze user patterns
  * enhance_pick_with_memory() - Adjust confidence based on history
  * learn_from_session() - Store session-based learnings
- Implement GlobalMemoryManager for cross-agent insights
- Add pattern recognition for user success/failure rates by prop type
- Create memory_demo.py demonstrating all functionality
- Update README with memory system documentation
- All agents now provide personalized recommendations based on user history
- Safe fallback storage when mem0ai unavailable or OPENAI_API_KEY not set
- Tested and verified: AutoML + Memory integration working correctly

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,9 @@ numpy>=1.24.0
 plotly>=5.17.0
 nbastatpy>=0.1.0
 cs2api>=0.3.0
+leaguepedia_parser_thomasbarrepitous
+flashscore-scraper
+scikit-learn
+PyYAML
+auto-machine-learning
+mem0ai
