--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pytest
 ruff
 black
 autoflake
+auto-machine-learning
 # ============================================================================
 # DEPLOYMENT-OPTIMIZED REQUIREMENTS
 # ============================================================================
